--- a/index.html
+++ b/index.html
@@ -10238,8 +10238,8 @@ PERFORMANCE OF THIS SOFTWARE.
                     <a data-testid="linkElement" href="//www.wix.com/lpviral/enviral?utm_campaign=vir_wixad_live&amp;adsVersion=white&amp;orig_msid=4a87abeb-8cfc-4a9e-aeba-e794b6d0a2e6" target="_blank" rel="nofollow" class="Oxzvyr YD5pSO has-custom-focus">
                         <span class="aGHwBE">
                             <span class="areOb6">
-                                This site was designed with the 
-                                <div data-testid="bannerLogo" style="direction:ltr;display:inline-flex">
+                                This site was designed with the John Felix
+                                <!--Code for Wix.com was here-->
                                     <div>
                                         <svg class="e5cW_9" viewBox="0 0 28 10.89" aria-label="wix">
                                             <path d="M16.02.2c-.55.3-.76.78-.76 2.14a2.17 2.17 0 0 1 .7-.42 3 3 0 0 0 .7-.4A1.62 1.62 0 0 0 17.22 0a3 3 0 0 0-1.18.2z" class="o4sLYL"></path>
@@ -10247,10 +10247,10 @@ PERFORMANCE OF THIS SOFTWARE.
                                         </svg>
                                     </div>
                                     <div class="uJDaUS">.com</div>
-                                </div>
-                                website builder. Create your website today.
+                                <!--Code for Wix.com was here-->
+                                
                             </span>
-                            <span class="O0tKs2 Oxzvyr">Start Now</span>
+                            <span class="O0tKs2 Oxzvyr"></span>
                         </span>
                     </a>
                 </div>
