--- a/index.html
+++ b/index.html
@@ -10681,7 +10681,7 @@ PERFORMANCE OF THIS SOFTWARE.
                                                 </div>
                                                 <div id="comp-levuonkl" class="BaOVQ8 tz5f0K comp-levuonkl wixui-text" data-testid="richTextElement">
                                                     <p class="font_10" style="text-align:center; line-height:1.79em; font-size:14px;">
-                                                        <span class="color_15">©2023 by CAKESMORE. Proudly created with Wix.com</span>
+                                                        <span class="color_15">Bake with love for you.</span>
                                                     </p>
                                                 </div>
                                             </div>
