--- a/index.html
+++ b/index.html
@@ -10238,7 +10238,7 @@ PERFORMANCE OF THIS SOFTWARE.
                     <a data-testid="linkElement" href="//www.wix.com/lpviral/enviral?utm_campaign=vir_wixad_live&amp;adsVersion=white&amp;orig_msid=4a87abeb-8cfc-4a9e-aeba-e794b6d0a2e6" target="_blank" rel="nofollow" class="Oxzvyr YD5pSO has-custom-focus">
                         <span class="aGHwBE">
                             <span class="areOb6">
-                                This site was designed with the John Felix
+                                This site was designed by John Felix
                                 <!--Code for Wix.com was here-->
                                     <div>
                                     
